fix box overflow

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body{
     margin: 0;
     padding: 10px;
-   max-width: 400px;
     font-family: 'Roboto', sans-serif;
     background: #f5f5f5;
+    max-width: 1200px;
    
 }
 
